# leilao_imoveis

./: .gitignore  mapa_imoveis_leilao.html  pyproject.toml
html/: mapa_imoveis_leilao.html
notebooks/: leilao.ipynb  mapa_imoveis_com_botao.html  teste.ipynb
src/: app.py  etl.py  map.py
