[tool.poetry]
name = "leilao-app"
version = "0.1.0"
description = ""
authors = ["Matheus Gentil <matheusvgentil@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
folium = "^0.18.0"
geopy = "^2.4.1"
ipywidgets = "^8.1.5"
streamlit = "^1.40.0"
streamlit-folium = "^0.23.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
